// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions chats addChat() should add chat with notifications 1`] = `
Array [
  Object {
    "ticket": Object {
      "id": 1,
      "last_message_body_text": "Hi",
      "requester_name": "Mark Frizeli",
    },
    "type": "ADD_CHAT",
  },
]
`;

exports[`actions chats addChat() should add chat with notifications 2`] = `
Array [
  Object {
    "body": "Hi",
    "icon": "/static/private/img/icons/logo.png",
    "onClick": [Function],
    "timeout": 5000,
    "title": "Mark Frizeli",
  },
]
`;

exports[`actions chats addChat() should add chat without notifications 1`] = `
Array [
  Object {
    "ticket": Object {
      "id": 1,
      "last_message_body_text": "Hi",
      "requester_name": "Mark Frizeli",
    },
    "type": "ADD_CHAT",
  },
]
`;

exports[`actions chats addChat() should add chat without notifications 2`] = `Array []`;

exports[`actions chats fetchChats() should fetch chats 1`] = `
Array [
  Object {
    "tickets": Array [
      Object {
        "id": 123,
      },
      Object {
        "id": 2,
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`actions chats markChatAsRead() should mark chat as read 1`] = `
Object {
  "ticketId": 12,
  "type": "MARK_CHAT_AS_READ",
}
`;

exports[`actions chats removeChat() should remove chat 1`] = `
Object {
  "ticketId": 12,
  "type": "REMOVE_CHAT",
}
`;

exports[`actions chats setChats() should add chats with notifications 1`] = `
Array [
  Object {
    "tickets": Array [
      Object {
        "id": 1,
        "last_message_body_text": "Hi",
        "requester_name": "Mark Frizeli",
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`actions chats setChats() should add chats with notifications 2`] = `Array []`;
